# just_another_rat_mini

./: README.md  pyproject.toml
just_another_rat_mini/: __main__.py  config.py  text.py
just_another_rat_mini/bot/: __init__.py
just_another_rat_mini/filters/: __init__.py  is_authenticated.py
just_another_rat_mini/handlers/: __init__.py  about.py  authenticate.py  authorization.py  download.py  execute.py  help_.py  upload.py
just_another_rat_mini/states/: __init__.py  get_input.py
